build: updated java 17 flags